--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "db:gen": "prisma generate --schema ./libs/prisma/schema.prisma",
+    "db:pull": "prisma db pull --schema ./libs/prisma/schema.prisma",
+    "db:push": "prisma db push --schema ./libs/prisma/schema.prisma"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +30,7 @@
     "@nrwl/node": "14.8.6",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.8.6",
+    "@prisma/client": "^4.5.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -37,6 +41,7 @@
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.8.6",
     "prettier": "^2.6.2",
+    "prisma": "^4.5.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
