--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.7",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "14.8.6",
@@ -42,6 +43,7 @@
     "nx": "14.8.6",
     "prettier": "^2.6.2",
     "prisma": "^4.5.0",
+    "prisma-erd-generator": "^1.2.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
