--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "test": "nx test",
     "db:gen": "prisma generate --schema ./libs/prisma/schema.prisma",
     "db:pull": "prisma db pull --schema ./libs/prisma/schema.prisma",
-    "db:push": "prisma db push --schema ./libs/prisma/schema.prisma"
+    "db:push": "prisma db push --schema ./libs/prisma/schema.prisma",
+    "db:seed": "prisma db seed"
   },
-  "private": true,
+  "prisma": {
+    "seed": "ts-node ./libs/prisma/src/lib/seed.ts"
+  },
+  "private": false,
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
@@ -23,6 +27,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@mermaid-js/mermaid-cli": "^9.1.7",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -39,6 +44,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "dotenv": "^16.0.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "28.1.1",
@@ -48,7 +54,7 @@
     "prisma": "^4.5.0",
     "prisma-erd-generator": "^1.2.1",
     "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.8.2"
   }
 }
