--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "private": false,
   "dependencies": {
+    "@fastify/helmet": "^10.0.2",
     "@fastify/static": "^6.5.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.1.6",
     "@nestjs/swagger": "^6.1.3",
+    "cache-manager": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
