--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": false,
   "dependencies": {
+    "@fastify/compress": "^6.1.1",
     "@fastify/helmet": "^10.0.2",
     "@fastify/static": "^6.5.0",
     "@nestjs/common": "^9.0.0",
