add remove array brackets

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@common/pipes": ["libs/common/pipes/src/index.ts"],
       "@common/dto": ["libs/common/dto/src/index.ts"],
+      "@common/pipes": ["libs/common/pipes/src/index.ts"],
+      "@common/utils": ["libs/common/utils/src/index.ts"],
       "@prisma": ["libs/prisma/src/index.ts"]
     }
   },
