--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cache-manager": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "iterare": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
