add repository lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,12 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@common/decorators": ["libs/common/decorators/src/index.ts"],
       "@common/dto": ["libs/common/dto/src/index.ts"],
       "@common/pipes": ["libs/common/pipes/src/index.ts"],
       "@common/utils": ["libs/common/utils/src/index.ts"],
-      "@common/decorators": [
-        "libs/common/decorators/src/index.ts"
+      "@common/repositories": [
+        "libs/common/repositories/src/index.ts"
       ],
       "@prisma": ["libs/prisma/src/index.ts"]
     }
