--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "@mermaid-js/mermaid-cli": "^9.1.7",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.8.6",
-    "@nrwl/eslint-plugin-nx": "14.8.6",
-    "@nrwl/jest": "14.8.6",
-    "@nrwl/linter": "14.8.6",
-    "@nrwl/nest": "14.8.6",
-    "@nrwl/node": "14.8.6",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.8.6",
+    "@nrwl/cli": "15.0.10",
+    "@nrwl/eslint-plugin-nx": "15.0.10",
+    "@nrwl/jest": "15.0.10",
+    "@nrwl/linter": "15.0.10",
+    "@nrwl/nest": "15.0.10",
+    "@nrwl/node": "15.0.10",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/workspace": "15.0.10",
     "@prisma/client": "^4.5.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -56,7 +56,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "14.8.6",
+    "nx": "15.0.10",
     "prettier": "^2.6.2",
     "prisma": "^4.5.0",
     "prisma-erd-generator": "^1.2.1",
@@ -65,3 +65,4 @@
     "typescript": "~4.8.2"
   }
 }
+
