add movie dto lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,10 +18,9 @@
       "@common/decorators": ["libs/common/decorators/src/index.ts"],
       "@common/dto": ["libs/common/dto/src/index.ts"],
       "@common/pipes": ["libs/common/pipes/src/index.ts"],
+      "@common/repositories": ["libs/common/repositories/src/index.ts"],
       "@common/utils": ["libs/common/utils/src/index.ts"],
-      "@common/repositories": [
-        "libs/common/repositories/src/index.ts"
-      ],
+      "@movie/dto": ["libs/movie/dto/src/index.ts"],
       "@prisma": ["libs/prisma/src/index.ts"]
     }
   },
