--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,8 +19,9 @@
       "@common/dto": ["libs/common/dto/src/index.ts"],
       "@common/pipes": ["libs/common/pipes/src/index.ts"],
       "@common/repositories": ["libs/common/repositories/src/index.ts"],
-      "@common/utils": ["libs/common/utils/src/index.ts"],
       "@common/types": ["libs/common/types/src/index.ts"],
+      "@common/utils": ["libs/common/utils/src/index.ts"],
+      "@common/enum": ["libs/common/enum/src/index.ts"],
       "@movie/dto": ["libs/movie/dto/src/index.ts"],
       "@prisma": ["libs/prisma/src/index.ts"]
     }
